// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaginationComponent /> should handleClick() and and go FIRST 1`] = `
preact-render-spy (1 nodes)
-------
<ul class="as-pagination custom-container-class">
  <li
    class="as-pagination__item as-pagination__item--first custom-first-class custom-disabled-class"
    onClick={[Function handleClick]}
  >
    <div>
      <| FIRST
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--previous custom-previous-class custom-disabled-class"
    onClick={[Function handleClick]}
  >
    <div>
      <-- Prev
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class custom-active-class"
    onClick={[Function onClick]}
  >
    <div>1</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>2</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>3</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>4</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>5</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--next custom-next-class "
    onClick={[Function handleClick]}
  >
    <div>Next --></div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--last custom-last-class "
    onClick={[Function handleClick]}
  >
    <div>LAST |></div>
  </li>
</ul>

`;

exports[`<PaginationComponent /> should handleClick() and and go LAST 1`] = `
preact-render-spy (1 nodes)
-------
<ul class="as-pagination custom-container-class">
  <li
    class="as-pagination__item as-pagination__item--first custom-first-class "
    onClick={[Function handleClick]}
  >
    <div>
      <| FIRST
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--previous custom-previous-class "
    onClick={[Function handleClick]}
  >
    <div>
      <-- Prev
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>96</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>97</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>98</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>99</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class custom-active-class"
    onClick={[Function onClick]}
  >
    <div>100</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--next custom-next-class custom-disabled-class"
    onClick={[Function handleClick]}
  >
    <div>Next --></div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--last custom-last-class custom-disabled-class"
    onClick={[Function handleClick]}
  >
    <div>LAST |></div>
  </li>
</ul>

`;

exports[`<PaginationComponent /> should handleClick() and and go NEXT 1`] = `
preact-render-spy (1 nodes)
-------
<ul class="as-pagination custom-container-class">
  <li
    class="as-pagination__item as-pagination__item--first custom-first-class "
    onClick={[Function handleClick]}
  >
    <div>
      <| FIRST
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--previous custom-previous-class "
    onClick={[Function handleClick]}
  >
    <div>
      <-- Prev
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>1</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class custom-active-class"
    onClick={[Function onClick]}
  >
    <div>2</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>3</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>4</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>5</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--next custom-next-class "
    onClick={[Function handleClick]}
  >
    <div>Next --></div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--last custom-last-class "
    onClick={[Function handleClick]}
  >
    <div>LAST |></div>
  </li>
</ul>

`;

exports[`<PaginationComponent /> should handleClick() and and go PREV 1`] = `
preact-render-spy (1 nodes)
-------
<ul class="as-pagination custom-container-class">
  <li
    class="as-pagination__item as-pagination__item--first custom-first-class "
    onClick={[Function handleClick]}
  >
    <div>
      <| FIRST
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--previous custom-previous-class "
    onClick={[Function handleClick]}
  >
    <div>
      <-- Prev
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>1</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>2</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class custom-active-class"
    onClick={[Function onClick]}
  >
    <div>3</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>4</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>5</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--next custom-next-class "
    onClick={[Function handleClick]}
  >
    <div>Next --></div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--last custom-last-class "
    onClick={[Function handleClick]}
  >
    <div>LAST |></div>
  </li>
</ul>

`;

exports[`<PaginationComponent /> should not render if data is empty 1`] = `
preact-render-spy (1 nodes)
-------
{null}

`;

exports[`<PaginationComponent /> should render with custom props 1`] = `
Object {
  "children": Array [],
  "classNames": Object {
    "active": "custom-active-class",
    "container": "custom-container-class",
    "disabled": "custom-disabled-class",
    "first": "custom-first-class",
    "item": "custom-item-class",
    "last": "custom-last-class",
    "next": "custom-next-class",
    "previous": "custom-previous-class",
  },
  "currentQuery": Object {
    "page": 1,
    "size": 10,
  },
  "data": Object {
    "total_hits": 1000,
  },
  "dirty": true,
  "goFirstLast": true,
  "padding": 2,
  "target": "#some-target",
  "template": Object {
    "first": "<| FIRST",
    "item": "{{page}}",
    "last": "LAST |>",
    "next": "Next -->",
    "previous": "<-- Prev",
  },
}
`;

exports[`<PaginationComponent /> should render with custom props 2`] = `
preact-render-spy (1 nodes)
-------
<ul class="as-pagination custom-container-class">
  <li
    class="as-pagination__item as-pagination__item--first custom-first-class custom-disabled-class"
    onClick={[Function handleClick]}
  >
    <div>
      <| FIRST
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--previous custom-previous-class custom-disabled-class"
    onClick={[Function handleClick]}
  >
    <div>
      <-- Prev
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class custom-active-class"
    onClick={[Function onClick]}
  >
    <div>1</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>2</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>3</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>4</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link custom-item-class "
    onClick={[Function onClick]}
  >
    <div>5</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--next custom-next-class "
    onClick={[Function handleClick]}
  >
    <div>Next --></div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--last custom-last-class "
    onClick={[Function handleClick]}
  >
    <div>LAST |></div>
  </li>
</ul>

`;

exports[`<PaginationComponent /> should render with default props 1`] = `
Object {
  "children": Array [],
  "classNames": Object {
    "active": "as-pagination__item--active",
    "container": "",
    "disabled": "as-pagination__item--disabled",
    "first": "",
    "item": "",
    "last": "",
    "next": "",
    "previous": "",
  },
  "currentQuery": Object {
    "page": 1,
    "size": 10,
  },
  "data": Object {
    "total_hits": 1000,
  },
  "dirty": true,
  "goFirstLast": false,
  "padding": 3,
  "target": "#some-target",
  "template": Object {
    "first": "<< First",
    "item": "{{page}}",
    "last": "Last >>",
    "next": "Next >",
    "previous": "< Prev",
  },
}
`;

exports[`<PaginationComponent /> should render with default props 2`] = `
preact-render-spy (1 nodes)
-------
<ul class="as-pagination ">
  <li
    class="as-pagination__item as-pagination__item--previous  as-pagination__item--disabled"
    onClick={[Function handleClick]}
  >
    <div>
      < Prev
    </div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link  as-pagination__item--active"
    onClick={[Function onClick]}
  >
    <div>1</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link  "
    onClick={[Function onClick]}
  >
    <div>2</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link  "
    onClick={[Function onClick]}
  >
    <div>3</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link  "
    onClick={[Function onClick]}
  >
    <div>4</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link  "
    onClick={[Function onClick]}
  >
    <div>5</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link  "
    onClick={[Function onClick]}
  >
    <div>6</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--link  "
    onClick={[Function onClick]}
  >
    <div>7</div>
  </li>
  <li
    class="as-pagination__item as-pagination__item--next  "
    onClick={[Function handleClick]}
  >
    <div>Next ></div>
  </li>
</ul>

`;
